# ClaimMiner

./: .gitignore  config.ini.tmpl  package.json  pyproject.toml
claim_miner/: __init__.py  app.py  auth.py  base_onto.py  bulk_tasks.py  dispatcher.py  embed.py  html_metadata.py  kafka.py  linkml_pydantic.py  llm.py  models.py  nlp.py  ontology.py  ontology_registry.py  pyd_models.py  search.py  task_registry.py  uri.py  uri_equivalence.py  utils.py
claim_miner/api/: __init__.py  analysis.py  collection.py  docs.py  search.py  statement.py  structure.py  user.py
claim_miner/models/: __init__.py  auth.py  base.py  collections.py  content.py  embedding.py  structures.py  tasks.py
claim_miner/scripts/: add_permissions.py  bulk_create_collections.py  db_backup.py  db_updater.py  initial_setup.py  utils.py
claim_miner/tasks/: __init__.py  cli.py  cluster.py  download.py  embed.py  feedly.py  gdelt.py  kafka.py  process_html.py  process_paragraphs.py  process_pdf.py  process_text.py  prompts.py  tasks.py
claim_miner/web/: __init__.py  analysis.py  auth_routes.py  claim.py  claim_clusters.py  collection.py  dashboard.py  docs.py  prompts.py  routes.py  scatterplot.py  search.py  task_template.py  triggers.py
deploy/: admin_base.sql  analysis.sql  analysis_functions.sql  analyzer.sql  base.sql  base_functions.sql  claim_link.sql  claim_link_functions.sql  clusters.sql  collection.sql  document.sql  document_link.sql  embedding.sql  entities.sql  fragment.sql  mmr_function.sql  schema_def.sql  schema_def_functions.sql  structured_idea.sql  structured_idea_functions.sql  task_template.sql  task_trigger.sql  topic.sql  uri_equiv.sql  user.sql  user_functions.sql
deploy/attic/: base-1.sql  topic-1.sql
deploy/migrations/: base-1M.sql  topic-1M.sql
doc/: Makefile  conf.py  db_updater.rst  index.rst  install.rst  overview.rst  user_journey.rst
revert/: admin_base.sql  analysis.sql  analysis_functions.sql  analyzer.sql  base.sql  base_functions.sql  claim_link.sql  claim_link_functions.sql  clusters.sql  collection.sql  document.sql  document_link.sql  embedding.sql  entities.sql  fragment.sql  mmr_function.sql  schema_def.sql  schema_def_functions.sql  structured_idea.sql  structured_idea_functions.sql  task_template.sql  task_trigger.sql  topic.sql  uri_equiv.sql  user.sql  user_functions.sql
schemas/: core.linkml.yaml
scss/: conversence.scss  custom.scss
static/css/: style.css
templates/: admin.html  analysis_info.html  apply_prompt.html  base.html  change_password.html  claim_cluster_analysis.html  claim_cluster_cluster_details.html  claim_clusters_new.html  claim_info.html  dashboard.html  doc_info.html  doc_links.html  edit_collection.html  edit_feedly_template.html  edit_infer_quotes_by_proximity_template.html  edit_prompt_template.html  edit_task_trigger.html  edit_template.html  gdelt.html  key_points.html  list_analyses.html  list_claim_clusters.html  list_claims.html  list_collections.html  list_docs.html  list_task_triggers.html  list_templates.html  login.html  macros.html  propose_claim.html  register.html  reset_password_request.html  scatter.html  scatter_standalone.html  search.html  spa.html  upload_claims.html  upload_docs.html  view_collection.html
test/: conftest.py  fixtures.py  mock_dispatcher.py  test_add_document.py  test_app_base.py  test_clustering.py  test_dashboard.py  test_embeddings.py  test_gdelt.py  test_linkml.py  test_process_text.py  test_prompts.py
test/data/: claims.txt  simple_test.html  simple_test.txt
